# agner

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/skills/tlaplus-modeling/: SKILL.md
benchmark/: actor_benchmarks.cpp
include/agner/: actor.hpp  actor_concepts.hpp  actor_control.hpp  actor_detail.hpp  agner.hpp  errors.hpp  gen_event.hpp  genserver.hpp  mt_scheduler.hpp  pmr_helpers.hpp  scheduler.hpp  scheduler_base.hpp  scheduler_concept.hpp  supervisor.hpp  task.hpp
include/agner/detail/: actor_detail.hpp  chase_lev_deque.hpp  gen_event_detail.hpp  genserver_detail.hpp  null_mutex.hpp  scheduler_concept_detail.hpp  scheduler_traits.hpp  supervisor_detail.hpp  task_detail.hpp
scripts/: benchmark.sh  coverage.sh  coverage_logical.py
spec/: .gitignore  PROOF_LEDGER.md  README.md  actor_lifecycle.cfg  actor_lifecycle.tla  cascade_exit.cfg  core_actor_system.cfg  core_actor_system.tla  genserver.cfg  genserver.tla  genserver_multi_caller.cfg  genserver_timeout.cfg  mailbox_ordering.cfg  missing_actor_send.cfg  notify_waiter_multi.cfg  notify_waiter_multi.tla  notify_waiter_sender_vs_timeout.cfg  notify_waiter_two_sender.cfg  spawn_link_atomicity.cfg  supervisor.cfg  supervisor.tla  supervisor_intensity.cfg  supervisor_one_for_all.cfg  supervisor_shutdown.cfg
spec/abstractions/: README.md
spec/abstractions/genserver/: README.md
spec/abstractions/supervisor/: README.md
spec/core/: README.md
spec/core/contract/: README.md
spec/core/coordination/: README.md
spec/core/failure/: README.md
spec/core/timing/: README.md
spec/implementation/: README.md
spec/refinement/: README.md
spec/refinement/actor_identity_core_projection/: README.md  actor_identity_core_projection.cfg  actor_identity_core_projection.tla
spec/refinement/coroutine_core_projection/: README.md  coroutine_core_projection.cfg  coroutine_core_projection.tla
spec/refinement/identity_coroutine_core_projection/: README.md  identity_coroutine_core_projection.cfg  identity_coroutine_core_projection.tla
spec/refinement/message_delivery_core_projection/: README.md  message_delivery_core_projection.cfg  message_delivery_core_projection.tla
spec/shared/: actor_system.tla  refinement_vocabulary.tla
spec/systems/: README.md
test/: actor_benchmarks.cpp  actor_control_test.cpp  actor_control_tests.cpp  actor_test.cpp  actor_tests.cpp  chase_lev_deque_test.cpp  deterministic_scheduler.hpp  deterministic_scheduler_tests.cpp  gen_event_test.cpp  genserver_test.cpp  mt_scheduler_test.cpp  scheduler_test.cpp  scheduler_tests.cpp  supervisor_test.cpp  task_test.cpp  task_tests.cpp  test_support.hpp
test/include/: deterministic_scheduler.hpp  test_support.hpp
(+89 files in other folders)
